# word-counter

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml
src/: json_tests.rs  lib.rs  main.rs
